# RockEngine

./: .gitmodules  CMakeLists.txt  README.md  build.sh
domain/scenes/: SampleScene.yaml
include/engine/components/: Transform.hpp
include/engine/core/: Application.hpp  Component.hpp  GameObject.hpp  InputManager.hpp  Observable.hpp  Scene.hpp  SceneManager.hpp  Serializable.hpp  System.hpp  TimeManager.hpp
include/engine/inspection/: inspector.hpp
include/engine/serialization/: Registry.hpp  Serializable.hpp  SerializableFactory.hpp
include/engine/utils/: IDGenerator.hpp
src/: main.cpp
src/editor/: Editor.cpp  Editor.hpp  EditorWindow.cpp  EditorWindow.hpp
src/engine/components/: Transform.cpp
src/engine/core/: Application.cpp  Component.cpp  GameObject.cpp  InputManager.cpp  Observable.cpp  Scene.cpp  SceneManager.cpp  Serializable.cpp  System.cpp  TimeManager.cpp
src/engine/inspection/: inspector.cpp
src/engine/serialization/: Registry.cpp  Serializable.cpp  SerializableFactory.cpp
src/engine/utils/: IDGenerator.cpp
